[gd_scene load_steps=8 format=3 uid="uid://dcx7t20cr107b"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_3ng8l"]
[ext_resource type="Shader" path="res://Menus/main_menu.gdshader" id="1_biqop"]
[ext_resource type="Script" path="res://Menus/color_rect.gd" id="2_ov7cy"]
[ext_resource type="FontFile" uid="uid://mxvrxnsvrnvd" path="res://fonts/ThaleahFat.ttf" id="3_x01dc"]
[ext_resource type="PackedScene" uid="uid://blnu6ier5774y" path="res://Menus/menu_options.tscn" id="5_6a0kj"]
[ext_resource type="PackedScene" uid="uid://cccatn4s61y4q" path="res://Menus/menu_settings.tscn" id="6_qd27b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hu258"]
shader = ExtResource("1_biqop")
shader_parameter/bottom_color = Color(0.215686, 0.403922, 0.67451, 1)
shader_parameter/top_color = Color(0.185498, 0.41621, 1, 1)
shader_parameter/wave_amp = 0.5
shader_parameter/wave_size = 4.39
shader_parameter/wave_time_mul = 0.5
shader_parameter/total_phases = 15

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_3ng8l")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_hu258")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.784314, 0, 0, 1)
script = ExtResource("2_ov7cy")

[node name="Title" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.003
anchor_right = 0.499
anchor_bottom = 0.003
offset_left = -92.36
offset_top = 21.92
offset_right = -29.36
offset_bottom = 36.92
grow_horizontal = 2
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("3_x01dc")
text = "Elemento"

[node name="MenuOptions" parent="." instance=ExtResource("5_6a0kj")]
visible = false
alignment = 1

[node name="MenuSettings" parent="." instance=ExtResource("6_qd27b")]
offset_left = -104.5
offset_top = -24.0
offset_right = 104.5
offset_bottom = 24.0

[connection signal="options_pressed" from="MenuOptions" to="." method="_on_menu_options_options_pressed"]
[connection signal="exit_settings" from="MenuSettings" to="." method="_on_menu_settings_exit_settings"]
